# AIO-gym-temp

./: .gitignore  LICENSE  MANIFEST.in  README.ja.md  README.md  README.zh-CN.md  pyproject.toml  run.sh  serve.py
.github/workflows/: backend.yml  pages.yml
aiogym/: README.md  __init__.py  _config.py  _deprecations.py  _serialization.py  _validation.py  api.py  catalog.py  controllers.py  env.py  env_factory.py  evaluation.py  kernel.py  models.py  objectives.py  pyproject.toml  requirements.txt  scoring.py  train.py  train_all.sh  train_rlpd.py  train_sac.py
aiogym/_environment/: __init__.py  config.py  disturbances.py  observations.py  transitions.py
aiogym/_internal/: __init__.py  config.py  identifiers.py  paths.py
aiogym/cli/: __init__.py  artifact_tools.py  benchmark.py  main.py  single_benchmark.py  suite.py  suite_benchmark.py  train.py  train_rlpd.py  train_sb3.py  tune_cstr_mpc.py  tune_extraction_pid.py
aiogym/configs/benchmarks/: core.json  crystallization-tracking.json  robustness-actuator.json  standard-baselines.json
aiogym/configs/controllers/: cstr_grid_mpc.json  mpc.json  oracle.json  pid.json  sb3.json
aiogym/control/: __init__.py  baselines.py  mpc_grid.py  oracle.py
aiogym/controllers/: __init__.py  adapters.py  configs.py  contracts.py  mpc.py  onnx.py  oracle.py  pid.py  registry.py
aiogym/controllers/configs/: mpc.json  onnx.json  oracle.json  pid.json  sb3.json
aiogym/controllers/examples/: README.md  custom_controller.py
aiogym/controllers/tuning/: __init__.py  tune_cstr_mpc.py  tune_extraction_pid.py  tune_quadruple_mpc.py  tune_quadruple_oracle.py  tune_quadruple_pid.py
aiogym/evaluation/: __init__.py  aggregation.py  artifact_checks.py  artifact_plotting.py  artifact_tables.py  artifact_writers.py  artifacts.py  benchmark.py  cases.py  core.py  evaluator.py  metadata.py  metric_catalog.py  objective_specs.py  objectives.py  plots.py  protocols.py  report_rendering.py  reports.py  results.py  rollouts.py  rows.py  runner.py  suite.py  suite_cases.py  suite_loading.py  suite_results.py  task_acceptance.py  task_profiles.py
aiogym/evaluation/artifact/: __init__.py  checks.py  plotting.py  report.py  svg.py  tables.py  writers.py
aiogym/evaluation/execution/: __init__.py  benchmark.py  evaluator.py  (+3 more)
aiogym/metrics/: __init__.py  economic.py  kpi.py  robustness.py  safety.py  tracking.py
aiogym/models/: __init__.py  adapters.py  backends.py  cards.py  core.py  declarative.py  integration.py  parameter_profiles.py  registry.py  validation.py
aiogym/rl/: __init__.py  artifacts.py  rlpd.py  train_rlpd.py  train_sb3.py  transitions.py
aiogym/runs/: .gitignore  bench_cascade_controllers.json  bench_cstr_controllers.json  bench_cstr_smoke.json  bench_hvac_controllers.json  bench_phase3_eval_smoke.json  bench_quadruple_controllers.json  rlpd_cascade_econ.json  rlpd_cstr_econ.json  rlpd_hvac_econ.json  rlpd_quadruple_econ.json
aiogym/tests/: __init__.py  generate_golden.mjs  golden.json  interface_support.py  test_cascade_physics.py  test_cascade_recirculating.py  test_catalog.py  test_cli.py  test_crystallization.py  test_env_contract.py  test_evaluation_contract.py  test_interface.py  test_model_infrastructure.py  test_models_api.py  test_module_boundaries.py  test_objectives.py  test_parity.py  test_paths.py  test_quadruple_physics.py  test_regressions.py  test_transitions.py
docs/: architecture.md  capabilities.md  concepts.md  index.md  model_infrastructure.md  public_api.md
docs/model_cards/: README.md  cascade.md  cascade_recirculating.md  crystallization.md  cstr.md  extraction.md  heater.md  hvac.md  quadruple.md
docs/plans/: cascade-model-modification-plan.md  cascade-recirculating-implementation-plan.md  cascade-stage0-baseline.md
docs/reports/: cascade-model-accuracy-authenticity.md  cascade-model-validation-results.json  cascade-recirculating-accuracy-authenticity.md  cascade-recirculating-validation-results.json
docs/scenarios/: cascade.md  cascade_recirculating.md  cstr.md  extraction.md  heater.md  hvac.md  quadruple.md
frontend/: challenge.html  index.html  run.sh  serve.py
frontend/css/: challenge.css  styles.css  tier0.css
frontend/js/: app.js  charts.js  controls.js  i18n.js  schematic.js
frontend/models/: rlpd_cascade.onnx  rlpd_cstr.onnx  rlpd_hvac.onnx  rlpd_quadruple.onnx
scripts/: benchmark_controllers.py  benchmark_cstr_controllers.py  generate_golden.mjs  plot_cstr_mpc_rollout.py  plot_cstr_pid_rollout.py  plot_cstr_tracking_mpc_rollout.py  tune_cstr_mpc_tracking.py
(+100 files in other folders)
