[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogym"
version = "0.1.0"
description = "Native Gymnasium backend and benchmark suite for AIO-Gym process-control environments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AIO-Gym Contributors" }
]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "casadi>=3.6",
  "stable-baselines3>=2.3",
  "torch>=2.2",
  "onnx>=1.16",
  "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aiogym-artifact-check = "aiogym.cli.artifact_tools:artifact_check_main"
aiogym-model-cards = "aiogym.cli.artifact_tools:model_cards_main"
aiogym-report = "aiogym.cli.artifact_tools:report_main"
aiogym-single-benchmark = "aiogym.cli.single_benchmark:main"
aiogym-suite-benchmark = "aiogym.cli.suite_benchmark:main"
aiogym-train-rlpd = "aiogym.rl.train_rlpd:main"
aiogym-train-sb3 = "aiogym.rl.train_sb3:main"

[tool.setuptools]
packages = [
  "aiogym",
  "aiogym._internal",
  "aiogym.cli",
  "aiogym.controllers",
  "aiogym.controllers.tuning",
  "aiogym.evaluation",
  "aiogym.evaluation.metrics",
  "aiogym.models",
  "aiogym.models.scenarios",
  "aiogym.rl",
]

[tool.setuptools.package-data]
aiogym = [
  "controllers/configs/*.json",
  "controllers/examples/*.py",
  "controllers/examples/*.md",
  "models/examples/*.py",
  "models/examples/*.md",
  "evaluation/suites/*.json",
]
