[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogym"
version = "0.1.0"
description = "Native Gymnasium backend and benchmark suite for AIO-Gym process-control environments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AIO-Gym Contributors" }
]

dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "casadi>=3.6",
  "stable-baselines3>=2.3",
  "torch>=2.2",
  "onnx>=1.16",
  "onnxruntime>=1.17",
]

[project.urls]
Homepage = "https://github.com/zhuxinji/AIO-gym-temp"
Documentation = "https://github.com/zhuxinji/AIO-gym-temp/blob/main/docs/index.md"
Repository = "https://github.com/zhuxinji/AIO-gym-temp"
Issues = "https://github.com/zhuxinji/AIO-gym-temp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aiogym = "aiogym.cli.main:main"

[tool.setuptools]
packages = [
  "aiogym",
  "aiogym._environment",
  "aiogym._internal",
  "aiogym.cli",
  "aiogym.controllers",
  "aiogym.controllers.tuning",
  "aiogym.evaluation",
  "aiogym.evaluation.artifact",
  "aiogym.evaluation.execution",
  "aiogym.evaluation.metrics",
  "aiogym.models",
  "aiogym.models.scenarios",
  "aiogym.models.tasks",
  "aiogym.rl",
]

[tool.setuptools.package-data]
aiogym = [
  "controllers/configs/*.json",
  "models/examples/*.py",
  "models/examples/*.md",
  "models/parameters/*.json",
  "evaluation/suites/*.json",
  "evaluation/suites/presets/*.json",
  "models/tasks/builtin/*/*.json",
]
